Added a different icon for dev, fixed a bug with maximum purchases. Introduced a dialog box to use later

--- a/app/App_Resources/Android/app.gradle
+++ b/app/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "org.nativescript.Habbajet" 
+    applicationId = "org.nativescript.HabbajetDev" 
     
     //override supported platforms
     // ndk {
